general: fix top margin on mobile

--- a/app/oc_website/static/style.css
+++ b/app/oc_website/static/style.css
@@ -40,7 +40,7 @@ main {
     font-size: 11pt;
   }
   body {
-    margin: 0;
+    margin: 1rem 0;
   }
   #content {
     padding-left: 1rem;
